fix spacing issue

--- a/style/sass/partials/_three-boxes.sass
+++ b/style/sass/partials/_three-boxes.sass
@@ -1,9 +1,8 @@
 #three-boxes
-  padding: 60px 0
+  padding: 60px 0 110px 0
   button
-    margin: 35px auto
+    margin: 0 auto
     display: block
-    margin-top: 20px
 
   .inner_container
     display: flex
